--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,8 +3,8 @@
     <div class="col-4">
       <form>
         <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <label for="exampleInputUsername1">Username</label>
+          <input type="text" class="form-control" id="exampleInputUsername1" placeholder="Enter username">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
@@ -15,3 +15,4 @@
     </div>
   </div>
 </div>
+<script src="/js/signup.js"></script>
